# anchor_v_0_26_0

./: CHANGELOG.md  Cargo.toml  README.md
.github/actions/setup-solana/: action.yaml
.github/workflows/: no-cashing-tests.yaml  tests.yaml
avm/src/: lib.rs
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  template.rs
client/: Cargo.toml
client/example/: Cargo.toml  run-test.sh
client/example/src/: main.rs
client/src/: cluster.rs  lib.rs
docker/: Makefile
docs/programs/tic-tac-toe/: Anchor.toml
docs/src/pages/docs/: cross-program-invocations.md  high-level-overview.md  manifest.md  pdas.md  publishing-source.md  the-accounts-struct.md
examples/tutorial/basic-0/: Anchor.toml
examples/tutorial/basic-1/: Anchor.toml
examples/tutorial/basic-2/: Anchor.toml
examples/tutorial/basic-3/: Anchor.toml
examples/tutorial/basic-4/: Anchor.toml
lang/: Cargo.toml
lang/src/: context.rs
lang/src/accounts/: account.rs  account_loader.rs
lang/tests/: generics_test.rs
spl/: Cargo.toml
tests/anchor-cli-account/: Anchor.toml
tests/anchor-cli-account/programs/account-command/src/: lib.rs
tests/bpf-upgradeable-state/: Anchor.toml
tests/cashiers-check/: Anchor.toml
tests/cashiers-check/programs/cashiers-check/src/: lib.rs
tests/cfo/: Anchor.toml
tests/cfo/programs/cfo/src/: lib.rs
tests/cfo/scripts/: localnet.sh
tests/chat/: Anchor.toml
tests/chat/programs/chat/src/: lib.rs
tests/composite/: Anchor.toml
tests/cpi-returns/: Anchor.toml
tests/cpi-returns/programs/callee/src/: lib.rs
tests/custom-coder/: Anchor.toml
tests/declare-id/: Anchor.toml
tests/declare-id/programs/declare-id/src/: lib.rs
tests/docs/: Anchor.toml
tests/docs/programs/docs/src/: lib.rs
tests/errors/: Anchor.toml
tests/errors/programs/errors/src/: lib.rs
tests/errors/tests/: errors.ts
tests/escrow/: Anchor.toml
tests/escrow/programs/escrow/src/: lib.rs
tests/events/: Anchor.toml
tests/floats/: Anchor.toml
tests/floats/programs/floats/src/: lib.rs
tests/ido-pool/: Anchor.toml
tests/ido-pool/programs/ido-pool/src/: lib.rs
tests/interface/: Anchor.toml
tests/interface/programs/counter/src/: lib.rs
tests/lockup/: Anchor.toml
tests/lockup/programs/lockup/src/: lib.rs
tests/lockup/tests/: lockup.js
tests/misc/: Anchor.toml
tests/multiple-suites/: Anchor.toml
tests/multiple-suites-run-single/: Anchor.toml
tests/multiple-suites-run-single/programs/multiple-suites-run-single/src/: lib.rs
tests/multiple-suites/programs/multiple-suites/src/: lib.rs
tests/multisig/: Anchor.toml
tests/multisig/programs/multisig/src/: lib.rs
tests/optional/: Anchor.toml
tests/pda-derivation/: Anchor.toml
tests/pda-derivation/programs/pda-derivation/src/: lib.rs
tests/pyth/: Anchor.toml
tests/pyth/programs/pyth/src/: lib.rs
tests/realloc/: Anchor.toml
tests/relations-derivation/: Anchor.toml
tests/safety-checks/: Anchor.toml
tests/spl/token-proxy/: Anchor.toml
tests/swap/: Anchor.toml
tests/system-accounts/: Anchor.toml
tests/sysvars/: Anchor.toml
tests/tictactoe/: Anchor.toml
tests/typescript/: Anchor.toml
tests/validator-clone/: Anchor.toml
tests/zero-copy/: Anchor.toml
(+18 files in other folders)
