[package]
name = "solarti-anchor-cli"
version = "0.26.0"
authors = ["armaniferrante <armaniferrante@gmail.com>"]
rust-version = "1.59"
edition = "2021"
repository = "https://github.com/coral-xyz/anchor"
description = "Anchor CLI"
license = "Apache-2.0"

[[bin]]
name = "anchor"
path = "src/bin/main.rs"

[features]
dev = []
default = []

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.32"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
solarti-anchor-lang = { path = "../lang", version = "0.26.0" }
solarti-anchor-client = { path = "../client", version = "0.26.0" }
anchor-syn = { path = "../lang/syn", features = ["idl", "init-if-needed"], version = "0.26.0" }
serde_json = "1.0"
shellexpand = "2.1.0"
toml = "0.5.8"
semver = "1.0.4"
serde = { version = "1.0.122", features = ["derive"] }
miraland-sdk = "1.14.17-rc5"
miraland-program = "1.14.17-rc5"
miraland-client = "1.14.17-rc5"
miraland-cli-config = "1.14.17-rc5"
miraland-faucet = "1.14.17-rc5"
dirs = "4.0"
heck = "0.4.0"
flate2 = "1.0.19"
tar = "0.4.35"
reqwest = { version = "0.11.4", features = ["multipart", "blocking"] }
tokio = "1.0"
pathdiff = "0.2.0"
cargo_toml = "0.13.0"
walkdir = "2.3.2"
chrono = "0.4.19"
portpicker = "0.1.1"

[lib]
crate-type = ["lib"]
name = "anchor_cli"