[package]
name = "solarti-anchor-spl"
version = "0.26.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]
rust-version = "1.59"
edition = "2021"
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[features]
default = ["mint", "token", "associated_token"]
mint = []
token = ["solarti-token"]
associated_token = ["solarti-associated-token-account"]
governance = []
shmem = []
stake = ["borsh"]
devnet = []
metadata = ["miraplex-token-metadata"]
dex = ["serum_dex"]

[dependencies]
anchor-lang = { path = "../lang", package = "solarti-anchor-lang", version = "0.26.0", features = ["derive"] }
borsh = { version = "^0.9", optional = true }
serum_dex = { git = "https://github.com/openbook-dex/program/", rev = "1be91f2", version = "0.4.0", features = ["no-entrypoint"], optional = true }
miraland-program = "1.14.17-rc5"
solarti-token = { version = "3.5.4", features = ["no-entrypoint"], optional = true }
solarti-associated-token-account = { version = "1.1.6", features = ["no-entrypoint"], optional = true }
miraplex-token-metadata = { version = "^1.7.1", optional = true, features = ["no-entrypoint"] }
